# tqdm1

./: README.md  poe_tasks.toml  pyproject.toml
src/tqdm1/: __init__.py  ex1.py
